# adapters/api/v1/docs/swagger.json
@@ -328,10 +328,6 @@
                     "type": "string",
                     "example": ""
                 },
-                "spread_id": {
-                    "type": "string",
-                    "example": "550e8400-e29b-41d4-a716-446655440000"
-                },
                 "success": {
                     "type": "boolean",
                     "example": true
@@ -345,10 +341,6 @@
                 "err_message": {
                     "type": "string",
                     "example": "invalid request body"
-                },
-                "spread_id": {
-                    "type": "string",
-                    "example": "550e8400-e29b-41d4-a716-446655440000"
                 },
                 "success": {
                     "type": "boolean",
